Fix for #36150, missing Preview Render Updates with Add/Remove material slot.